--- a/api/package.json
+++ b/api/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "description": "example project react with nodejs",
   "main": "server.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "scripts": {
-    "start": "node server.bundle.js",
+    "start2": "node server.bundle.js",
+    "start": "node ./server.js localhost 3000",
     "build": "webpack",
-    "dev": "nodemon ./server.js localhost 3080"
+    "dev": "nodemon ./server.js localhost 3000"
   },
   "repository": {
     "type": "git",
@@ -19,17 +24,21 @@
   },
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.9",
     "express": "^4.17.1",
     "google-auth-library": "^0.12.0",
     "googleapis": "^67.1.0",
     "http-proxy-middleware": "^1.0.4",
-    "random-id": "^1.0.4"
+    "netlify-lambda": "^2.0.7",
+    "random-id": "^1.0.4",
+    "serverless-http": "^2.7.0"
   },
   "devDependencies": {
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
+    "husky": "^4.3.8",
     "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
