--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@
 version: '3'
 services:
   nodejs-server:
+    env_file:
+      - ./api/.env
     build:
       context: ./api
       dockerfile: Dockerfile-dev
