--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -1,7 +1,7 @@
 ## This rule redirects to an external API, signing requests with a secret
 [[redirects]]
-  from = "/api"
-  to = "http://anmal-search.herokuapp.com/api"
+  from = "/api/search-animal"
+  to = "http://anmal-search.herokuapp.com/api/search-animal"
   status = 200
   force = true # COMMENT: ensure that we always redirect
   headers = {X-From = "Netlify"}
