--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/bbachi/vuejs-nginx-docker#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.9",
+    "csv-parse": "^4.16.0",
     "express": "^4.17.1",
     "google-auth-library": "^0.12.0",
     "googleapis": "^67.1.0",
