--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -5,7 +5,19 @@
   force = true
 
 [[redirects]]
+  from = "/api/wikiaves-search-wid"
+  to = "http://anmal-search.herokuapp.com/api/search-animal"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/api/search-animal"
+  to = "http://anmal-search.herokuapp.com/api/search-animal"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/api/ebird-search"
   to = "http://anmal-search.herokuapp.com/api/search-animal"
   status = 200
   force = true
