--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -27,3 +27,15 @@
   to = "http://anmal-search.herokuapp.com/api/inaturalist-search"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/api/get-bio-online-localities"
+  to = "http://anmal-search.herokuapp.com/api/get-bio-online-localities"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/api/bio-online-search-species-in-locality"
+  to = "http://anmal-search.herokuapp.com/api/bio-online-search-species-in-locality"
+  status = 200
+  force = true
