dropdown na busca por especies no Bio-Online

--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -39,3 +39,9 @@
   to = "http://anmal-search.herokuapp.com/api/bio-online-search-species-in-locality"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/api/get-genera-species-commonnames"
+  to = "http://anmal-search.herokuapp.com/api/get-genera-species-commonnames"
+  status = 200
+  force = true
