--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,7 +12,10 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "exceljs": "^4.2.1",
+    "nodejs": "*",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
     "vue-tabs": "^0.3.1"
   },
   "devDependencies": {
