--- a/my-app/netlify.toml
+++ b/my-app/netlify.toml
@@ -28,6 +28,12 @@
   status = 200
   force = true
 
+[[redirects]]
+  from = "/api/download-from-locality"
+  to = "http://anmal-search.herokuapp.com/api/api/download-from-locality"
+  status = 200
+  force = true
+
 
 
 
