--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,8 @@
     "nodejs": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
-    "vue-tabs": "^0.3.1"
+    "vue-tabs": "^0.3.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
