--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
     "vue-tabs": "^0.3.1",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
